add procesed date to combined_features.pkl

--- a/notebooks/2_0_feature_engineering.ipynb
+++ b/notebooks/2_0_feature_engineering.ipynb
@@ -497,14 +497,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Get today's date\n",
+        "today = datetime.today()\n",
+        "\n",
+        "# Format the date as YYYY-MM-DD\n",
+        "formatted_date = today.strftime('%Y-%m-%d')\n",
+        "\n",
         "# Save the combined features matrix\n",
-        "with open(f'{processed_data_path}/combined_features.pkl', 'wb') as f:\n",
+        "with open(f'{processed_data_path}/combined_features_{formatted_date}.pkl', 'wb') as f:\n",
         "    pickle.dump(combined_features, f)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
