normalize numeric data and applied pca

--- a/notebooks/2_0_feature_engineering.ipynb
+++ b/notebooks/2_0_feature_engineering.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,7 +15,6 @@
         "import os\n",
         "import sys\n",
         "from datetime import datetime\n",
-        "import re\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -23,6 +22,8 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from scipy.sparse import hstack\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "import pickle\n",
         "\n",
         "# import custom libraries\n",
@@ -34,14 +35,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The last processed date is: 2024-07-11\n"
+            "Reading c:\\Users\\MULTIVISION\\projects\\movie-recommendation-system/data/processed/movies_cleaned_data_2024-07-11.csv...\n"
           ]
         }
       ],
@@ -52,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -63,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 126,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -207,7 +208,7 @@
               "4    ['father', 'part', 'ii']  "
             ]
           },
-          "execution_count": 215,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -219,22 +220,72 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ohvKUDdF-o1L"
+        "id": "4dNBZZt1B09s"
       },
+      "source": [
+        "## Text Representation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 127,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 127,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text_cols = ['overview','genres','keywords','title_wrangled']\n",
+        "\n",
+        "# Concatenate selected columns into a new 'text_data' column\n",
+        "df['text_data'] = df[text_cols].apply(lambda x: ','.join(x.dropna().astype(str)), axis=1)\n",
+        "\n",
+        "# Remove square brackets '[' and ']'\n",
+        "df['text_data'] = df['text_data'].str.replace('[\\\\[\\\\]]', '', regex=True)\n",
+        "\n",
+        "# Drop empty rows\n",
+        "df = df.dropna(subset=['text_data'])\n",
+        "df['text_data'].isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### TF-IDF Vectorization\n",
+        " - Create a sparse matrix that reflects the importance of a word in a document\n",
+        " - Limits the vocabulary size to the top max_features most frequent terms based on term frequencies across the corpus."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 128,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tfidf_vectorizer = TfidfVectorizer(max_features=10000, ngram_range=(1, 2), min_df=2)\n",
+        "tfidf_matrix = tfidf_vectorizer.fit_transform(df['text_data'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Normalize Numeric Data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GpY0_qybYj50",
-        "outputId": "125f2cab-dfd2-44e3-f4e1-55ff1f19b8dc"
-      },
+      "execution_count": 129,
+      "metadata": {},
       "outputs": [
         {
           "data": {
@@ -245,7 +296,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 216,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -262,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 130,
       "metadata": {},
       "outputs": [
         {
@@ -356,7 +407,7 @@
               "max      547.488298   2020.000000     10.000000"
             ]
           },
-          "execution_count": 217,
+          "execution_count": 130,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -367,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -378,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": 132,
       "metadata": {},
       "outputs": [
         {
@@ -407,15 +458,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 423
-        },
-        "id": "AjF2DlXpt8u6",
-        "outputId": "6b18d8ed-978c-40a9-8a8a-507e72dbd6af"
-      },
+      "execution_count": 133,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -440,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 221,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [
         {
@@ -534,47 +578,13 @@
               "max        1.000000      1.000000      1.000000"
             ]
           },
-          "execution_count": 221,
+          "execution_count": 134,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "normalized_num_features_df.describe()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4dNBZZt1B09s"
-      },
-      "source": [
-        "## Text Representation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 222,
-      "metadata": {
-        "id": "2kd0t-6-tww8"
-      },
-      "outputs": [],
-      "source": [
-        "text_cols = ['overview','genres','keywords','title_wrangled']\n",
-        "\n",
-        "def get_tfidf_matrix(df: pd.DataFrame, text_cols: list):\n",
-        "\n",
-        "    # Initialize TF-IDF Vectorizer\n",
-        "    tf = TfidfVectorizer(ngram_range=(1, 2), min_df=2)\n",
-        "\n",
-        "    # Combine text from specified columns into a single string for each row\n",
-        "    combined_text = df[text_cols].apply(lambda x: ' '.join(x.dropna().astype(str)), axis=1)\n",
-        "\n",
-        "    # Apply TF-IDF Vectorizer\n",
-        "    return tf.fit_transform(combined_text)\n",
-        "\n",
-        "# Get the TF-IDF matrix\n",
-        "tfidf_matrix = get_tfidf_matrix(df, text_cols)"
       ]
     },
     {
@@ -588,22 +598,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 223,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "m7A6yt-4CYBn",
-        "outputId": "9700c279-3cc8-44ec-d32a-944b73010a4e"
-      },
+      "execution_count": 139,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Shape of tfidf_matrix: (45493, 227985)\n",
+            "Shape of tfidf_matrix: (45493, 10000)\n",
             "Shape of normalized_num_features: (45493, 3)\n",
-            "Shape of combined_features: (45493, 227988)\n"
+            "Shape of combined_features: (45493, 10003)\n"
           ]
         }
       ],
@@ -617,8 +621,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Applying PCA to reduce combined_features size"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": 140,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Original shape: (45493, 10003)\n",
+            "Reduced shape: (45493, 100)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Assuming combined_features is a sparse matrix\n",
+        "from scipy.sparse import csr_matrix\n",
+        "\n",
+        "# Convert to CSR format for more efficient operations\n",
+        "combined_features_csr = combined_features.tocsr()\n",
+        "\n",
+        "# Standardize the data\n",
+        "scaler = StandardScaler(with_mean=False)  # with_mean=False to work with sparse data\n",
+        "combined_features_standardized = scaler.fit_transform(combined_features_csr)\n",
+        "\n",
+        "# Apply PCA\n",
+        "n_components = 100 \n",
+        "pca = PCA(n_components=n_components)\n",
+        "reduced_features = pca.fit_transform(combined_features_standardized.toarray())  # Converting sparse to dense\n",
+        "\n",
+        "print(f\"Original shape: {combined_features.shape}\")\n",
+        "print(f\"Reduced shape: {reduced_features.shape}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Saving trained data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 141,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -632,8 +684,8 @@
         "processed_data_path = parent_dir + '/data/processed/'\n",
         "\n",
         "# Save the combined features matrix\n",
-        "with open(f'{processed_data_path}/combined_features_{formatted_date}.pkl', 'wb') as f:\n",
-        "    pickle.dump(combined_features, f)"
+        "with open(f'{processed_data_path}/combined_features_pca100_{formatted_date}.pkl', 'wb') as f:\n",
+        "    pickle.dump(reduced_features, f)"
       ]
     },
     {
